<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrencyActivity">

    <TextView
        android:id="@+id/tCurrencyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/currency_title"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tCurrencyFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="122dp"
        android:text="@string/from"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/sCurrency1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tCurrencyTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:text="@string/to"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tCurrencyFrom"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sCurrency1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tCurrencyFrom"
        app:layout_constraintEnd_toStartOf="@+id/iCurrency1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tCurrencyFrom"
        app:layout_constraintTop_toTopOf="@+id/tCurrencyFrom"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/sCurrency2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tCurrencyTo"
        app:layout_constraintStart_toEndOf="@+id/tCurrencyTo"
        app:layout_constraintStart_toStartOf="@+id/sCurrency1"
        app:layout_constraintTop_toTopOf="@+id/tCurrencyTo"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/iCurrency1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/sCurrency1"
        app:layout_constraintStart_toEndOf="@+id/sCurrency1"
        app:layout_constraintStart_toStartOf="@+id/iCurrency2"
        app:layout_constraintTop_toTopOf="@+id/sCurrency1"
        app:layout_constraintVertical_bias="0.555"
        app:srcCompat="@android:drawable/alert_light_frame" />

    <ImageView
        android:id="@+id/iCurrency2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/sCurrency2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sCurrency2"
        app:layout_constraintTop_toTopOf="@+id/sCurrency2"
        app:srcCompat="@android:drawable/alert_light_frame" />

    <EditText
        android:id="@+id/eCurrencyValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:ems="10"
        android:hint="0.0"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bCurrencyConverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="402dp"
        android:text="@string/converter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bCurrencyConverterAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="448dp"
        android:text="@string/converter_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/currencyDivider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="480dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tCurrencyAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="192dp"
        android:text="@string/amount"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tCurrencyResult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tCurrencyResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="0.0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tCurrencyAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tCurrencyAmount"
        app:layout_constraintTop_toTopOf="@+id/tCurrencyAmount" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/currencyToolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>