<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TemperatureActivity">

    <TextView
        android:id="@+id/tTemperatureTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/temperature_title"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tTemperatureFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="122dp"
        android:text="@string/from"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/sTemperature1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tTemperatureTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:text="@string/to"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tTemperatureFrom"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sTemperature1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tTemperatureFrom"
        app:layout_constraintEnd_toStartOf="@+id/iTemperature1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tTemperatureFrom"
        app:layout_constraintTop_toTopOf="@+id/tTemperatureFrom"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/sTemperature2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tTemperatureTo"
        app:layout_constraintStart_toEndOf="@+id/tTemperatureTo"
        app:layout_constraintStart_toStartOf="@+id/sTemperature1"
        app:layout_constraintTop_toTopOf="@+id/tTemperatureTo"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/iTemperature1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/sTemperature1"
        app:layout_constraintStart_toEndOf="@+id/sTemperature1"
        app:layout_constraintStart_toStartOf="@+id/iTemperature2"
        app:layout_constraintTop_toTopOf="@+id/sTemperature1"
        app:layout_constraintVertical_bias="0.555"
        app:srcCompat="@android:drawable/alert_light_frame" />

    <ImageView
        android:id="@+id/iTemperature2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/sTemperature2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sTemperature2"
        app:layout_constraintTop_toTopOf="@+id/sTemperature2"
        app:srcCompat="@android:drawable/alert_light_frame" />

    <EditText
        android:id="@+id/eTemperatureValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:ems="10"
        android:hint="0.0"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bTemperatureConverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="402dp"
        android:text="@string/converter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bTemperatureConverterAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="464dp"
        android:text="@string/converter_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/temperatureDivider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="480dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tTemperatureAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="192dp"
        android:text="@string/amount"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tTemperatureResult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tTemperatureResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="0.0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tTemperatureAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tTemperatureAmount"
        app:layout_constraintTop_toTopOf="@+id/tTemperatureAmount" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/temperatureToolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>